--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+/* adding background color to the page heading */
 .team-heading{
     background: rgb(255,0,0);
     background: radial-gradient(circle, white 0%, rgba(0,0,0,1) 100%);
 }
+/* adding style attributes to each team member card */
 .employee-card{
     margin:20px;
     box-shadow: 0px 0px 5px 5px black;
@@ -14,9 +16,10 @@
     background: rgb(0,0,0);
     background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,255,255,1) 100%);
 }
-body{
-    background-color: lightgray;
-}
 .list-group-item{
     margin:2px;
+}
+/* setting the background color of the body of the page */
+body{
+    background-color: lightgray;
 }
